Modernize Mojo serialization of ui::KeyEvents

This changes serialization to write key_code, dom_code, dom_key and whether it's
a character. These four things are the key properties that identify a KeyEvent.
The previous code would result in potentially applying keyboard layouts to the
deserialized event, which is problematic if the layout was already applied
before serialization.

BUG=921202
TEST=covered by tests

Change-Id: I7a15ed2fce6e084988b8f23bbf2f06f420ff3771
Reviewed-on: https://chromium-review.googlesource.com/c/1409461
Commit-Queue: Scott Violet <sky@chromium.org>
Reviewed-by: Tom Sepez <tsepez@chromium.org>
Reviewed-by: Wez <wez@chromium.org>
Cr-Commit-Position: refs/heads/master@{#624269}
Former-commit-id: 154ad7d65aa5ad38dd1ce19ee1c4cc9cb799c9a1