ui/events/ozone/layout/keyboard_layout_engine_manager.cc
@@ -25,6 +25,7 @@ KeyboardLayoutEngineManager::~KeyboardLayoutEngineManager() {
   instance_ = NULL;
 }
 
+// static
 void KeyboardLayoutEngineManager::SetKeyboardLayoutEngine(
     std::unique_ptr<KeyboardLayoutEngine> engine) {
   if (instance_)
@@ -33,6 +34,7 @@ void KeyboardLayoutEngineManager::SetKeyboardLayoutEngine(
     new KeyboardLayoutEngineManager(engine.release());
 }
 
+// static
 KeyboardLayoutEngine* KeyboardLayoutEngineManager::GetKeyboardLayoutEngine() {
   // TODO(kpschoedel): crbug.com/430194 This lazy initialization is a
   // workaround for not yet initializing KeyboardLayoutEngineManager
